# ObjLoader

./: .gitignore
learn_sdl/: CMakeLists.txt  Camera.cpp  Camera.h  Obj.cpp  Obj.h  ObjLoad.cpp  ObjLoad.h  ShaderProgram.cpp  ShaderProgram.h  glad.c  main.cpp
lib/glad/: glad.h
